# lazy-batched-ksw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ksw-test.cpp
app/cbc-conv/: CMakeLists.txt  cbc_conv.cpp  cbc_conv.h  cbc_conv_test.cpp  rotation_collector_base.h
app/cifar10-infer/: CMakeLists.txt  benchmark_results.txt  cifar10.cc  cifar10_benchmark_results.csv
app/cifar10-infer/polycircuit/: IComponent.hpp
app/cifar10-infer/polycircuit/component/CIFAR10ImageClassification/: CIFAR10ImageClassification.hpp
app/mat-inv/: CMakeLists.txt  kcl25-test.cpp  kcl25.cpp  kcl25.h  mult-bench.cpp  rotation_collector_lazy.h
app/mat-mult/: as24.h  run_param1_experiments.sh
app/mat-mult/ar24/: CMakeLists.txt  ar24-test.cpp  ar24.cpp  ar24.h
app/mat-mult/jkls18/: CMakeLists.txt  double-hoist-test.cpp  hoisted-direct-test.cpp  jkls18-test.cpp  jkls18.cpp  jkls18.h  rotation_collector_base.h  rotation_collector_lazy.h  run_benchmark.sh
app/mat-mult/param1_results/: ar24_param1_threads1.csv
app/sorting/: mehp24_sort.cpp  mehp24_sort.h  mehp24_utils.cpp  mehp24_utils.h
app/sorting/mehp24/: CMakeLists.txt  bench_stages.h  mehp24-test.cpp  rotation_collector_lazy.h  sorting.cpp  sorting.h  utils-basics.cpp  utils-basics.h  utils-eval.cpp  utils-eval.h  utils-matrices.cpp  utils-matrices.h  utils-ptxt.cpp  utils-ptxt.h
benchmark/: CMakeLists.txt  measure-batched-ks.cpp  measure-unit-ops.cpp  run_batched_ks_experiments.sh
benchmark/batched_ks_results/: timings_threads1.csv  timings_threads32.csv
utils/: memory_tracker.h
